base arch setup

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,52 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.compile_sdk_version = 28
+    ext.min_sdk_version = 16
+    ext.targer_sdk_version = 28
+    ext.version_code = 1
+    ext.version_name = "0.0.1"
+
+    // App dependencies
+    ext.multidex_version = '1.0.3'
+    ext.gradle_version = '3.3.1'
     ext.kotlin_version = '1.3.21'
+    ext.android_support_version = '28.0.0'
+    ext.firebase_support_version = '17.4.0'
+    ext.google_play_services_version = '17.0.2'
+    ext.constraint_layout_version = '1.1.3'
+    ext.gson_version = '2.8.2'
+    ext.okhttp_version = '3.9.1'
+    ext.logging_interceptor = '3.8.0'
+    ext.retrofit_version = '2.3.0'
+    ext.retrofit_rxjava_version = '2.2.0'
+    ext.dagger_version = '2.16'
+    ext.rxandroid_version = '2.1.0'
+    ext.rxjava_version = '2.2.3'
+    ext.javax_annotation_version = '3.1.1'
+    ext.junit_version = '4.12'
+    ext.runner_version = '1.0.2'
+    ext.espresso_version = '3.0.2'
+    ext.arch_testing_version = '1.1.1'
+    ext.lifecycle_version = '1.1.1'
+    ext.room_version = '1.1.1'
+    ext.gradle_version = '3.3.1'
+    ext.glide_version = '4.8.0'
+    ext.mokito_version = '2.8.9'
+    ext.wave_animation_version = '2.1.3'
+    ext.country_code_picker_version = '2.0.4'
+    ext.zxing_code_version = '3.2.1'
+    ext.zxing_embedded_version = '3.4.0@aar'
+    ext.kotlin_coroutines_version = '1.0.0'
+    ext.secured_preference_version = '0.1.4'
+    ext.saferoom_version = '0.4.5'
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
