--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,25 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
-    compileSdkVersion 28
+    dataBinding.enabled = true
+    compileSdkVersion compile_sdk_version
     defaultConfig {
         applicationId "com.iciciappathon.retailbook"
-        minSdkVersion 17
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion min_sdk_version
+        targetSdkVersion targer_sdk_version
+        versionCode version_code
+        versionName version_name
+        vectorDrawables.setUseSupportLibrary(true)
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "API_ENDPPOINT", "\"https://mosambee-dot-qa-dot-perpule-qa.appspot.com/resources/v3/\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -22,13 +30,111 @@ android {
     }
 }
 
+
+repositories {
+    mavenCentral()
+    google()
+    maven {
+        url "https://s3.amazonaws.com/repo.commonsware.com"
+    }
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    //MultiDex Support
+    implementation "com.android.support:multidex:$multidex_version"
+
+    // kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    //kotlin Co-routines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+
+    // Android support libs
+    implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation "com.android.support:design:$android_support_version"
+    implementation "com.android.support:recyclerview-v7:$android_support_version"
+    implementation "com.android.support:cardview-v7:$android_support_version"
+    implementation "com.android.support:support-v4:$android_support_version"
+    implementation "com.android.support:support-compat:$android_support_version"
+    implementation "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
+
+    //google play services
+    implementation "com.google.android.gms:play-services-vision:$google_play_services_version"
+
+    //firebase
+    implementation "com.google.firebase:firebase-messaging:$firebase_support_version"
+
+    // Constraint Layout
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
+    // live data model
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+
+    // Data Binding
+    kapt "com.android.databinding:compiler:$gradle_version"
+
+//    // room database
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
+    // OkHttp3
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    // logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor"
+
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_rxjava_version"
+
+    // rx android and java
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+    // gson
+    implementation "com.google.code.gson:gson:$gson_version"
+
+    //zxing
+    implementation "com.journeyapps:zxing-android-embedded:$zxing_embedded_version"
+    implementation "com.google.zxing:core:$zxing_code_version"
+
+    // dagger
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    // wave loading animation
+    implementation "com.wang.avi:library:$wave_animation_version"
+
+    // country code picker
+    implementation "com.hbb20:ccp:$country_code_picker_version"
+
+    // Db and Preference Security
+    implementation "com.scottyab:secure-preferences-lib:$secured_preference_version"
+    implementation "com.commonsware.cwac:saferoom:$saferoom_version"
+
+    // testing
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.mockito:mockito-android:$mokito_version"
+    testImplementation "org.mockito:mockito-inline:$mokito_version"
+    testImplementation "org.mockito:mockito-core:$mokito_version"
+    testImplementation "android.arch.core:core-testing:$arch_testing_version"
+    androidTestImplementation "com.android.support.test:runner:$runner_version"
+    androidTestImplementation "org.mockito:mockito-android:$mokito_version"
+    androidTestImplementation "org.mockito:mockito-inline:$mokito_version"
+    androidTestImplementation "org.mockito:mockito-core:$mokito_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
 }
