--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,10 +75,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
-    // Data Binding
-    kapt "com.android.databinding:compiler:$gradle_version"
-
-//    // room database
+    // room database
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
 
@@ -105,8 +102,10 @@ dependencies {
     implementation "com.google.zxing:core:$zxing_code_version"
 
     // dagger
+    implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     //glide
